--- a/myonlineShop-seq-pos/package.json
+++ b/myonlineShop-seq-pos/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemone server.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "elile",
@@ -13,12 +13,13 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "pug": "^3.0.2",
     "sequelize": "^6.25.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
     "sequelize-cli": "^6.5.1"
   }
 }
